[package]
name = "farmingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_editor_pls = "0.4.0"
bevy_framepace = "0.12.1"
bevy_mod_picking = { version = "0.13.0", default-features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]}
bevy_turborand = "0.5.0"
bevy_vector_shapes = "0.4.5"
smooth-bevy-cameras = "0.8.0"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
bevy_mod_billboard = "0.3.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
