[package]
name = "farmingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = ["dynamic_linking"] }
bevy_xpbd_3d = "0.2.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main" }
bevy_framepace = "0.13.0"
bevy_mod_picking = { version = "0.15.0", default-features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]}
bevy_turborand = "0.6.0"
bevy_vector_shapes = "0.5.1"
smooth-bevy-cameras = "0.8.0"
bevy_mod_billboard = "0.4.1"
bevy_screen_diagnostics = "0.3.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
